--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="swag.css">
       <title>CSCE 432</title>
   <body>
-      <div>
-          <h2>This is the pop-up screen</h2>
+    <div class="extension-card">
+        <div class="extension-card__content">
+          <h3 class="extension-card__title">Black Lotus Temple</h3>
+          <p class="extension-card__description">This extension toggles the font on any webpage to Open-Dyslexic.</p>
+        </div>
       </div>
+      
 
   </body>
 </html>
