--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <div class="extension-card">
         <div class="extension-card__content">
           <h3 class="extension-card__title">Black Lotus Temple</h3>
-          <p class="extension-card__description">This extension toggles the font on any webpage to Open-Dyslexic.</p>
+          <p class="extension-card__description">This extension toggles the font on any webpage to a dyslexic friendly font</p>
+          <a href="https://opendyslexic.org/">Learn more here</a>
         </div>
       </div>
-      
-
   </body>
 </html>
