added link to toggle

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div class="extension-card__content">
           <h3 class="extension-card__title">Black Lotus Temple</h3>
           <p class="extension-card__description">This extension toggles the font on any webpage to a dyslexic friendly font</p>
-          <a href="https://opendyslexic.org/">Learn more here</a>
+          <p><a href="https://opendyslexic.org/">Learn more here</a></p>
+          <p><a href="chrome://extensions">Toggle Extension</a></p>
         </div>
       </div>
   </body>
