--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <h3 class="extension-card__title">Black Lotus Temple</h3>
           <p class="extension-card__description">This extension toggles the font on any webpage to a dyslexic friendly font</p>
           <p><a href="https://opendyslexic.org/">Learn more here</a></p>
-          <p><a href="chrome://extensions">Toggle Extension</a></p>
+          <p><a href="">Toggle Extension</a></p>
         </div>
       </div>
   </body>
